--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Password Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Generate a<br> random password</h1>
+        <div class="display">
+          <input type="text" id="password" placeholder="password">
+            <img src="copy.png">
+        </div>
+    </div>
+
+
+
 
 </body>
 </html>
