--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Generate a<br> random password</h1>
+        <h1>Generate a<br><span> random password</span></h1>
         <div class="display">
           <input type="text" id="password" placeholder="password">
             <img src="copy.png">
         </div>
+        <button><img src="generate.png">generate password</button>
     </div>
 
 
