added creating password  and copying password

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>Generate a<br><span> random password</span></h1>
         <div class="display">
           <input type="text" id="password" placeholder="password">
-            <img src="copy.png">
+            <img src="copy.png" alt="copy.png" onclick="copyPassword()">
         </div>
-        <button><img src="generate.png">generate password</button>
+        <button onclick="createPassword()"><img src="generate.png" alt="generate.png">generate password</button>
     </div>
 
 
