--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Generate a<br><span> random password</span></h1>
+        <h1>Generate a<br><span> RANDOM PASSWORD</span></h1>
         <div class="display">
           <input type="text" id="password" placeholder="password">
             <img src="copy.png" alt="copy.png" onclick="copyPassword()">
