--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Password Generator</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Generate a<br><span> RANDOM PASSWORD</span></h1>
-        <div class="display">
-          <input type="text" id="password" placeholder="password">
-            <img src="copy.png" alt="copy.png" onclick="copyPassword()">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title id="title">Random Password Generator</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="container" onclick="test()">
+            <h1 id="headerPrefix">Generate a</h1>
+            <h1><span id="headerSuffix">RANDOM PASSWORD</span></h1>
+            <div class="display">
+                <input type="text" id="password" placeholder="password"/>
+                <img src="copy.png" alt="copy.png" onclick="copyPassword()"/>
+            </div>
+            <button onclick="createPassword()">
+                <img src="generate.png" alt="generate.png"/>
+                <span id="buttonGeneratePassword">generate password</span>
+            </button>
         </div>
-        <button onclick="createPassword()"><img src="generate.png" alt="generate.png">generate password</button>
-    </div>
 
-
-
-<script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
