--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1><span id="headerSuffix">RANDOM PASSWORD</span></h1>
             <div class="display">
                 <input type="text" id="password" placeholder="password"/>
-                <img src="copy.png" alt="copy.png" onclick="copyPassword()"/>
+                <img src="copy.png" alt="copy.png" onclick="handleOnClickCopyPassword()"/>
             </div>
             <button onclick="createPassword()">
                 <img src="generate.png" alt="generate.png"/>
