remove onclick, rename handleClickCopyPassword

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="container" onclick="test()">
+        <div class="container">
             <h1 id="headerPrefix">Generate a</h1>
             <h1><span id="headerSuffix">RANDOM PASSWORD</span></h1>
             <div class="display">
                 <input type="text" id="password" placeholder="password"/>
-                <img src="copy.png" alt="copy.png" onclick="handleOnClickCopyPassword()"/>
+                <img src="copy.png" alt="copy.png" onclick="handleClickCopyPassword()"/>
             </div>
             <button onclick="createPassword()">
                 <img src="generate.png" alt="generate.png"/>
