add extra function handleClickButtonGeneratePassword

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <input type="text" id="password" placeholder="password"/>
                 <img src="copy.png" alt="copy.png" onclick="handleClickCopyPassword()"/>
             </div>
-            <button onclick="createPassword()">
+            <button onclick="handleClickButtonGeneratePassword()">
                 <img src="generate.png" alt="generate.png"/>
                 <span id="buttonGeneratePassword">generate password</span>
             </button>
