--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <div class="container">
             <h1 id="headerPrefix">Generate a</h1>
             <h1><span id="headerSuffix">RANDOM PASSWORD</span></h1>
+                <div class="container-checkboxes">
+                <h1>Choose your symbols in password</h1>
+                <p><input type="checkbox">Upper case letters</p>
+                <p><input type="checkbox">Lower case letters </p>
+                <p><input type="checkbox">Numbers</p>
+                <p><input type="checkbox">Symbols</p>
+                </div>
             <div class="display">
                 <input type="text" id="password" placeholder="password"/>
                 <img src="copy.png" alt="copy.png" onclick="handleClickCopyPassword()"/>
